# thinning_py3

./: LICENCE  LICENSE  README  README.txt  build.py  pyproject.toml  setup.py
example/: example.py
src/: c_thinning.c
thinning_py3.egg-info/: PKG-INFO
