[tool.poetry]
name = "thinning"
version = "1.2.7"
description = ""
authors = ["move.ai <info@move.ai>"]
readme = "README"


[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "1.24.3"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry>=0.12", "setuptools", "numpy"]
build-backend = "poetry.masonry.api"
